Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132597

Incorrect description of QTemporaryFile behavior when two placeholders are present

XMLWordPrintable

    • 1
    • e7abbc7bf (dev), 58221c195 (6.9), 85f77604e (6.8), 824249338 (tqtc/lts-6.5), d211f8f6a (tqtc/lts-6.2), e8219d8bf (tqtc/lts-5.15)
    • Foundation Sprint 122, Foundation Sprint 123

      The documentation of QTemporaryFile mentions that "Only the first occurrence of "XXXXXX" will be considered."

      Yet, in a pattern like qt_XXXXXX_XXXXXX_, it's the second placeholder that's being replaced.

      Need to check whether the documentation was wrong to begin with or whether this got broken somewhere on the way.

        For Gerrit Dashboard: QTBUG-132597
        # Subject Branch Project Status CR V

            mmutz Marc Mutz
            mmutz Marc Mutz
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: